src/test/ui/tag-variant-cast-non-nullary.stderr
error[E0605]: non-primitive cast: `NonNullary` as `isize`
  --> $DIR/tag-variant-cast-non-nullary.rs:8:15
   |
LL |     let val = v as isize;
   |               ^^^^^^^^^^
   |
   = note: an `as` expression can only be used to convert between primitive types. Consider using the `From` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0605`.
